# claudia_ui

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  chainlit.md  chainlit.yaml  pyproject.toml  start-claudia.sh
.chainlit/: config.toml
.claude/: settings.json
.playwright-mcp/: page-2026-07-10T13-57-32-957Z.yml  page-2026-07-10T14-03-48-381Z.yml  page-2026-07-10T14-04-23-796Z.yml  page-2026-07-10T14-13-05-118Z.yml  page-2026-07-10T14-13-29-853Z.yml  page-2026-07-10T14-21-05-705Z.yml  page-2026-07-10T14-25-46-603Z.yml  page-2026-07-10T14-26-19-738Z.yml  page-2026-07-10T14-26-45-470Z.yml  page-2026-07-10T14-27-08-399Z.yml  page-2026-07-10T14-27-28-959Z.yml  page-2026-07-10T14-27-51-863Z.yml  page-2026-07-10T14-29-39-705Z.yml  page-2026-07-10T14-30-38-474Z.yml  page-2026-07-10T14-41-53-739Z.yml  page-2026-07-10T14-43-20-535Z.yml  page-2026-07-10T14-48-00-063Z.yml  page-2026-07-10T14-48-18-773Z.yml  page-2026-07-10T14-51-03-830Z.yml  page-2026-07-10T14-51-51-467Z.yml  page-2026-07-10T14-53-50-170Z.yml  page-2026-07-10T14-58-59-994Z.yml  page-2026-07-10T15-01-02-971Z.yml  page-2026-07-10T15-01-42-831Z.yml  page-2026-07-10T15-03-35-842Z.yml  page-2026-07-10T15-05-07-777Z.yml  page-2026-07-10T15-06-35-631Z.yml  page-2026-07-10T15-06-54-823Z.yml  page-2026-07-10T15-08-25-911Z.yml  page-2026-07-10T15-09-54-822Z.yml  page-2026-07-10T15-10-28-390Z.yml  page-2026-07-10T15-11-06-010Z.yml  page-2026-07-10T15-12-24-562Z.yml  page-2026-07-10T15-12-44-480Z.yml  page-2026-07-10T15-15-27-333Z.yml  page-2026-07-10T15-15-47-505Z.yml  snap-alert2.md  snap-tv1.md  snap-tv2.md  snap-tv4.md  (+4 more)
claude-md-migration/: CLAUDE.md  api-references.md  conversation-memory-reference.md  gdrive-sync-reference.md  trading-data-reference.md  tradingview-reference.md
claudia/: agent.py  alert_manager.py  app.py  context_loader.py  conversation_store.py  execution_listener.py  gdrive_sync.py  message_sink.py  opening_status.py  order_flow.py  panel_app.py  panel_order_flow.py  panel_sink.py  panel_ws_fix.py  pnl_stream.py  session_reporter.py  status.py  tradingview.py
claudia/assets/: custom.css  custom.js
data/test-sessions/: 2026-06-23-2208.md
docs/: 2026-07-03-agent-info-architecture-review.md  2026-07-03-llm-best-practices-sources.md  2026-07-23-futures-order-field-8089-bug.md  README.md  api-reference.md  connectivity.md  context-loading-reference.md  context.md  conversation-memory-reference.md  env-vars-reference.md  flex-query-setup.md  gdrive-sync-reference.md  market-calendar-reference.md  order-api-reference.md  principles.md  project-status.md  prompt-caching-upgrade.md  security-audit-2026-06-12.md  security-audit-2026-06-25.md  startup-flow.md  trading-data-reference.md  tradingview-mcp-recovery.md  windows-compatibility.md
docs/audits/: 2026-07-03-agent-info-architecture-review.md  2026-07-15-python-3.14-incompatibility.md  2026-07-22-code-quality-pre-migration-audit.md  live-test-log.md  test-coverage-findings-2026-06-15.md
docs/plans/: 2026-06-09-claudia-ui-redesign-design.md  2026-06-11-gdrive-sync-design.md  2026-06-11-gdrive-sync.md  2026-07-01-scraping-rag-pipeline-design.md  2026-07-03-prompt-caching-upgrade.md  2026-07-06-live-pnl-streaming-design.md  2026-07-06-live-pnl-streaming.md  2026-07-07-execution-triggered-pnl-design.md  2026-07-07-execution-triggered-pnl.md  2026-07-08-order-cancel-modify.md  2026-07-10-claude-md-delink-imports.md  2026-07-10-gdrive-auth-dedup-design.md  2026-07-10-gdrive-auth-dedup.md  2026-07-10-live-test-bugfixes-handoff.md  2026-07-10-live-test-bugfixes.md  2026-07-14-docs-reorg-design.md  2026-07-14-docs-reorg-plan.md  2026-07-15-python-3.11-pin.md  2026-07-17-account-pnl-display-fixes.md  2026-07-17-ibkr-soft-timeout-recovery.md  2026-07-18-live-test-session.md  2026-07-22-panel-implementation-kickoff-prompt.md
docs/probes/: README.md  d4_probe.py  probe_d7_server.py  probe_d7_server_fixed.py  probe_watchdog.py  probe_watchdog_fix.py
docs/superpowers/plans/: 2026-06-09-ui-status-bar.md  2026-06-12-test-coverage.md  2026-07-07-execution-triggered-pnl.md  2026-07-22-panel-migration.md
docs/superpowers/specs/: 2026-06-11-gdrive-sync-design.md  2026-07-10-gdrive-oauth-client-migration-design.md
docs/versions/v1/: context.md  principles.md
public/: custom.css  custom.js
scripts/: archive-tv-mcp.sh  ibkr-keepalive.sh  install-ibkr-keepalive-daemon.sh
tests/: test_agent.py  test_context_loader.py  test_conversation_store.py  test_execution_listener.py  test_gdrive_sync.py  test_message_sink.py  test_opening_status.py  test_order_flow.py  test_panel_app.py  test_panel_order_flow.py  test_panel_sink.py  test_panel_ws_fix.py  test_pnl_stream.py  test_security_regressions.py  test_session_reporter.py  test_status.py  test_tradingview.py
