[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudia_ui"
version = "0.1.0"
description = "ClaudIA — AI trading assistant powered by ibkr_core_mcp"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.0",
    "anthropic>=0.28",
    # ibkr_core_mcp is installed separately: pip install -e ../ibkr_core_mcp
    "watchdog>=4.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
voice = [
    "edge-tts>=6.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claudia*"]

[tool.pytest.ini_options]
markers = ["integration: requires live IBKR gateway and credentials"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# app.py imports Chainlit after an asyncio patch that must run at module level first
"claudia/app.py" = ["E402"]
