[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudia_ui"
version = "0.1.0"
description = "ClaudIA — AI trading assistant powered by ibkr_core_mcp"
requires-python = ">=3.11,<3.14"
dependencies = [
    "chainlit>=2.0",
    "anthropic>=0.28",
    # ibkr_core_mcp is installed separately: pip install -e ../ibkr_core_mcp
    "watchdog>=4.0",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "requests>=2.31",
    "html2text>=2024.2",
]

[project.optional-dependencies]
voice = [
    "edge-tts>=6.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claudia*"]

[tool.pytest.ini_options]
markers = ["integration: requires live IBKR gateway and credentials"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF", "FA"]
ignore = [
    "E501",  # line-too-long — ~160 pre-existing lines exceed 100 chars, mostly
             # docstrings/URLs/system-prompt text; revisit as a dedicated pass if prioritized
]

[tool.mypy]
python_version = "3.11"
files = ["claudia", "tests"]
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

# The only genuinely unstubbed import in claudia/ or tests/ (verified 2026-07-21 against the
# actual venv — chainlit, mcp, and ibkr_core_mcp all ship py.typed, so ignore_missing_imports
# is not needed for them).
[[tool.mypy.overrides]]
module = ["googleapiclient.*"]
ignore_missing_imports = true
