[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudia_ui"
version = "0.1.0"
description = "ClaudIA — AI trading assistant powered by ibkr_core_mcp"
requires-python = ">=3.11,<3.14"
dependencies = [
    "chainlit>=2.0",
    "panel[fastapi]>=1.9",
    "anthropic>=0.28",
    # ibkr_core_mcp is installed separately: pip install -e ../ibkr_core_mcp
    "watchdog>=4.0",
    "python-dotenv>=1.0",
    # <2 pin required: the SDK's own README (verified 2026-07-22) documents v2 as a
    # pre-release/alpha-beta line — "Do not use v2 in production" — and explicitly
    # recommends this exact bound until v2 stabilizes.
    "mcp>=1.27,<2",
    "requests>=2.31",
    "html2text>=2024.2",
]

[project.optional-dependencies]
voice = [
    "edge-tts>=6.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claudia*"]

[tool.pytest.ini_options]
markers = ["integration: requires live IBKR gateway and credentials"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
# Historical verification probe scripts (D4/D7/watchdog), committed verbatim as run —
# evidence artifacts, not maintained code (see docs/probes/README.md, Task 5.6a review).
extend-exclude = ["docs/probes"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF", "FA"]
ignore = [
    "E501",  # line-too-long — ~160 pre-existing lines exceed 100 chars, mostly
             # docstrings/URLs/system-prompt text; revisit as a dedicated pass if prioritized
]

# RUF002 (ambiguous-unicode in docstrings) can't take an inline noqa — the comment would
# become literal docstring text. Both hits are correct typography (en-dash for a numeric
# range, × for a count), not encoding mistakes.
[tool.ruff.lint.per-file-ignores]
"claudia/order_flow.py" = ["RUF002"]
"tests/test_session_reporter.py" = ["RUF002"]

[tool.mypy]
python_version = "3.11"
files = ["claudia", "tests"]
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

# The only genuinely unstubbed import in claudia/ or tests/ (verified 2026-07-21 against the
# actual venv — chainlit, mcp, and ibkr_core_mcp all ship py.typed, so ignore_missing_imports
# is not needed for them).
[[tool.mypy.overrides]]
module = ["googleapiclient.*"]
ignore_missing_imports = true
